Version 5.2.0.4
Regexps are `equal?' when they have the same source [byte] string
 and mode
Numbers, characters, strings, byte strings, and regexps are interned by
 read and datum->syntax
Added read-intern-literal
mzlib/pconvert: added add-make-prefix-to-constructor parameter,
 which changes the default constructor-style printing in DrRacket
 to avoid a make- prefix; the HtDP languages set the parameter to #t

Version 5.2.0.3
Added module-predefined?
Changed the raacket -k command-line flag

Version 5.2.0.2
Added port-closed-evt
Changed I/O scheduling to use epoll()/kqueue() when available

Version 5.2, November 2011
Generalized begin-with-syntax to allow phase-N definitions,
 both variable and syntax, within a module for all N >= 0;
 removed define-values-for-syntax from fully expanded forms;
 added begin-with-syntax to fully expanded forms
Changed the location-creation semantics of internal definitions
 and letrec-syntaxes+values (to make them more let-like)
Added support for the collection links file, including
 (find-system-path 'links-file) and the raco link command
Added exn:fail:syntax:unbound
Added date*, which extends date to include nanoseconds and a 
 time zone name
Changed seconds->date to accept a real number return a date*
Added set-port-next-location! and changed the default prompt 
 read handler to use it when input and output ar terminals
Changed syntax-local-module-defined-identifiers to return
 a table for all phases instead of just two values
Add syntax-transforming-module-expression? and
 variable-reference->module-base-phase
Added variable-reference->module-declare-inspector, which allows
 a macro or other syntax tool to get the enclosing module's
 declaration-time inspector for taint operations
Added syntax-shift-phase-level
Removed built-in support for Honu reading and printing
racket/unsafe/ops: added unsafe-list-ref and unsafe-list-tail
ffi/unsafe: added support for C arrays and unions